# KSR-imp

./: .gitignore  CMakeLists.txt  README.md  config.toml  imgui.ini
src/: 7.4.camera.fs  Manager.cpp  Manager.h  app.cpp  app.h  build_map.cpp  build_map.h  camera.h  cgal_object.cpp  cgal_object.h  extract_surface.cpp  extract_surface.h  face_graph.cpp  face_graph.h  get_convex.cpp  gl_object.h  globject.h  intersection.cpp  intersection.h  kinetic.cpp  kinetic.h  label_polyhedron.cpp  label_polyhedron.h  log.h  main.cpp  platform.cpp  platform.h  ransac.cpp  ransac.h  region_growing.cpp  region_growing.h  scene.cpp  scene.h  shape_detection.h  surface.cpp
src/cgal/: cgal_object.cpp  cgal_object.h
src/detect_shape/: detect_shape.cpp  detect_shape.h  hierarchical.cpp  hierarchical.h  plane_merge.cpp  plane_merge.h  ransac.cpp  ransac.h  region_growing.cpp  region_growing.h  shape_diameter.cpp  shape_diameter.h  structure_detect.cpp  structure_detect.h
src/extract_surface/: build_map.cpp  build_map.h  extract_surface.cpp  extract_surface.h  face_graph.cpp  face_graph.h  label_polyhedron.cpp  label_polyhedron.h
src/gui/: app.cpp  app.h  camera.fs  camera.h  camera.vs  gl_object.h  platform.cpp  platform.h
src/math/: vec3.h
src/min-cut/: maxflow.cpp
src/output/: outmesh.off
src/partition/: BSP.cpp  BSP.h  intersection.cpp  kinetic.cpp  kinetic.h
src/util/: config.cpp  config.h  convex.cpp  convex.h  log.h
